new users being sent to database, but some fields are empty

--- a/client/partials/register.html
+++ b/client/partials/register.html
@@ -1,11 +1,11 @@
 <section>
     <div class="registerForm">
-        First Name: <input type="text" ng-model="account.firstName">
-        Last Name: <input type="text" ng-model="account.lastName">
-        Username: <input type="text" ng-model="account.username">
-        Email: <input type="text" ng-model="account.email">
-        Password: <input type="text" ng-model="account.password">
-        Password Confirmation: <input type="text" ng-model="account.passwordConfirmation">
+        First Name: <input type="text" ng-model="userAccount.first_name"> <br>
+        Last Name: <input type="text" ng-model="userAccount.last_name"> <br>
+        Username: <input type="text" ng-model="userAccount.username"> <br>
+        Email: <input type="text" ng-model="userAccount.email"> <br>
+        Password: <input type="text" ng-model="userAccount.password"> <br>
+        Password Confirmation: <input type="text" ng-model="userAccount.passwordConfirmation"> <br>
         <button ng-click="register()">Register</button>
     </div>
 </section>
