--- a/client/partials/occasions.html
+++ b/client/partials/occasions.html
@@ -7,12 +7,13 @@
     <div class="individualOccContainer">
         <button>ADD</button>
         <div class="addOccasion">
-            Title:<input type="text" required> 
-            Occasion Date: <input type="text" name="" id="" value="mm/dd/yyyy" required> 
-            Budget:<input type="integer">
+            Title:<input type="text" ng-model="occasion.title" required> 
+            Occasion Date: <input type="text" name="" id="" placeholder="mm/dd/yyyy" ng-model="occasion.data" required> 
+            Budget:<input type="integer" ng-model="occasion.budget">
+            <button ng-click="addOccasion()">ADD OCCASION</button>
         </div>
     </div>
     <div class "occasionCard">
-        TODO: This will need to populate with the users existing occasions.
+        <!-- TODO: This will need to populate with the users existing occasions. -->
     </div>
 </div>
