--- a/client/partials/occasions.html
+++ b/client/partials/occasions.html
@@ -8,9 +8,9 @@
         <button>ADD</button>
         <div class="addOccasion">
             Title:<input type="text" ng-model="occasion.title" required> 
-            Occasion Date: <input type="text" name="" id="" placeholder="mm/dd/yyyy" ng-model="occasion.data" required> 
+            Occasion Date: <input type="text" name="" id="" placeholder="mm/dd/yyyy" ng-model="occasion.date" required> 
             Budget:<input type="integer" ng-model="occasion.budget">
-            <button ng-click="addOccasion()">ADD OCCASION</button>
+            <button ng-click="addOccasion(occasion)">ADD OCCASION</button>
         </div>
     </div>
     <div class "occasionCard">
