--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -1,8 +1,8 @@
 <section>
-        <div class="registerForm">
-            Username: <input type="text" ng-model="userAccount.username"> <br>
+        <div class="loginForm">
+            Username: <input type="text" value="J" ng-model="userAccount.username"> <br>
             Email: <input type="text" ng-model="userAccount.email"> <br>
-            Password: <input type="text" ng-model="userAccount.password"> <br>
+            Password: <input type="text" value="j" ng-model="userAccount.password">  <br>
             <button ng-click="login()">LOGIN</button>
         </div>
     </section>
