able to navigate to individual occasion page

--- a/client/partials/occasions.html
+++ b/client/partials/occasions.html
@@ -14,13 +14,11 @@
         <a href="/past-occasions">Past</a>
     </div>
     <div class "occasionCard" ng-repeat="occasion in occasionList">
-        <h5>{{occasion.title}}</h5>
-        <h6>{{occasion.date}}</h6>
-        <h6>{{occasion.budget}}</h6>
-        <button>EDIT</button>
-        <button>DELETE</button>
-        
-        <!-- TODO: This will need to populate with the users existing occasions. -->
-
+        <a href="#!/occasions/{{occasion.id}}">
+            <h5>{{occasion.title}}</h5>
+            <h6>{{occasion.date}}</h6>
+            <h6>{{occasion.budget}}</h6>
+            {{occasion.id}}
+        </a>
     </div>
 </div>
