--- a/client/partials/purchases.html
+++ b/client/partials/purchases.html
@@ -1,15 +1,26 @@
 <h1>Purchases</h1>
-
 <section class="addPurchaseForm">
-    <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">
-            Dropdown button
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-        </div>
+    <div class="form-group">
+        <label for="exampleFormControlSelect1">Occasion:</label>
+        <select class="form-control" id="exampleFormControlSelect1">
+            <option value="">Select...</option>
+            <option ng-repeat="occasion in occasionList" ng-model="purchase.occasion">{{occasion.title}}</option>
+        </select>
     </div>
+    <div class="form-group">
+        <label for="exampleFormControlSelect1">Recipient:</label>
+        <select class="form-control" id="exampleFormControlSelect1">
+            <option value="">Select...</option>
+            <option ng-model="purchase.recipient">Family</option>
+        </select>
+    </div>
+    Name:
+    <input type="text" ng-model="purchase.name"> Price:
+    <input type="text" ng-model="purchase.price"> Description:
+    <input type="text" ng-model="purchase.description">
+    <button ng-click="addPurchase()">TRACK</button>
 </section>
+<div class="occasionContainer">
+    <h5>Occasion Details</h5>
+
+</div>
