--- a/client/partials/recipients.html
+++ b/client/partials/recipients.html
@@ -1,4 +1,4 @@
-<h1>Recipients</h1>
+<!-- <h1>Recipients</h1>
 
 Name: <input type="text" ng-model="recipent.name">
-Date of Birth: <input type="text" ng-model="recipient.dob">
+Date of Birth: <input type="text" ng-model="recipient.dob"> -->
