--- a/client/partials/purchases.html
+++ b/client/partials/purchases.html
@@ -15,10 +15,12 @@
         </select>
     </div>
     Name:
-    <input type="text" ng-model="purchase.name"> Price:
-    <input type="text" ng-model="purchase.price"> Description:
+    <input type="text" ng-model="purchase.purchase_name"> 
+    Price:
+    <input type="text" ng-model="purchase.price"> 
+    Description:
     <input type="text" ng-model="purchase.description">
-    <button ng-click="addPurchase()">TRACK</button>
+    <button ng-click="addPurchase(purchase)">TRACK</button>
 </section>
 <div class="occasionContainer">
     <h5>Occasion Details</h5>
