total cost of all purchases appearing on occasion page

--- a/client/partials/individualOccasion.html
+++ b/client/partials/individualOccasion.html
@@ -3,6 +3,7 @@
 <h3>{{occasion[0].title}}</h3>
 <h4>Date: {{occasion[0].date}}</h4> 
 <h4>Overall Budget: ${{occasion[0].budget}}</h4> 
+<h4>Purchase Total: ${{total}}</h4>
 
 <h4>Purchases</h4>
 <div class="purchaseCard" ng-repeat="purchase in occasionPurchases">
