--- a/client/partials/individualOccasion.html
+++ b/client/partials/individualOccasion.html
@@ -17,9 +17,13 @@
         
         <div class="occasionButtons">
             <button ng-switch-default ng-click="getOccasion()">EDIT</button>
+            <button ng-switch-default>DELETE</button>
             <button ng-switch-when="edit" id="edit" ng-click="updateOccasion(occasion[0].id, occasion[0])">SUBMIT</button>
+            <button ng-switch-when="edit" id="edit" ng-click="cancelEdit()">CANCEL</button>
+
     
         </div>
+        <h6>Total Spent: {{total}}</h6>
     </div>
 </div>
 
