--- a/client/partials/individualOccasion.html
+++ b/client/partials/individualOccasion.html
@@ -34,31 +34,31 @@
     <div ng-switch="purchaseEditMode">
         <div>
             <h6>Gift Purchased For:</h6> 
-            <input ng-switch-when="edit" id="edit" ng-model="purchase.recipient" ng-value="purchase.recipient">
-            <h6 ng-switch-default>{{purchase.recipient}}</h6>
+            <input ng-if="purchase.edit" id="edit" ng-model="purchase.recipient" ng-value="purchase.recipient">
+            <h6 ng-if="!purchase.edit">{{purchase.recipient}}</h6>
             Purchase ID {{purchase.id}}
         </div>
 
         <div>
-            <input ng-switch-when="edit" id="edit" ng-model="purchase.name" ng-value="purchase.name">
-            <h6 ng-switch-default>{{purchase.name}}</h6>
+            <input ng-if="purchase.edit" id="edit" ng-model="purchase.name" ng-value="purchase.name">
+            <h6 ng-if="!purchase.edit">{{purchase.name}}</h6>
         </div>
 
         <div>
-            <input ng-switch-when="edit" id="edit" ng-model="purchase.description" ng-value="purchase.description">
-            <h6 ng-switch-default>{{purchase.description}}</h6>
+            <input ng-if="purchase.edit" id="edit" ng-model="purchase.description" ng-value="purchase.description">
+            <h6 ng-if="!purchase.edit">{{purchase.description}}</h6>
         </div>
 
         <div>
-            <input ng-switch-when="edit" id="edit" ng-model="purchase.price" ng-value="purchase.price">
-            <h6 ng-switch-default>{{purchase.price}}</h6>
+            <input ng-if="purchase.edit" id="edit" ng-model="purchase.price" ng-value="purchase.price">
+            <h6 ng-if="!purchase.edit">{{purchase.price}}</h6>
         </div>
 
         <div class="occasionButtons">
-            <button ng-switch-default ng-click="getPurchase()" id="{{purchase.id}}">EDIT</button>
-            <button ng-switch-default ng-click="deletePurchase(purchase.id)">DELETE</button>
-            <button ng-switch-when="edit" id="edit" ng-click="updatePurchase(purchase.id)">SUBMIT</button>
-            <button ng-switch-when="edit" id="edit" ng-click="cancelEdit()">CANCEL</button>
+            <button ng-if="!purchase.edit" ng-click="getPurchase(purchase)" id="{{purchase.id}}">EDIT</button>
+            <button ng-if="!purchase.edit" ng-click="deletePurchase(purchase.id)">DELETE</button>
+            <button ng-if="purchase.edit" id="edit" ng-click="updatePurchase(purchase.id, purchase)">SUBMIT</button>
+            <button ng-if="purchase.edit" id="edit" ng-click="cancelEdit()">CANCEL</button>
         </div>
     </div>
 </div>
