--- a/client/partials/purchases.html
+++ b/client/partials/purchases.html
@@ -1,28 +1,93 @@
 <h1>Purchases</h1>
-<section class="addPurchaseForm">
-    <div class="form-group">
-        <label for="exampleFormControlSelect1">Occasion:</label>
-        <select class="form-control" id="exampleFormControlSelect1" ng-model="purchase.occasion_id">
-            <option value="">Select...</option>
-            <option ng-repeat="occasion in occasionList" ng-value="{{occasion.id}}">{{occasion.title}}</option>
-        </select>
-    </div>
-    <div class="purchaseInputField">
-        Name:
-        <input type="text" ng-model="purchase.name">
-    </div>
-    <div class="purchaseInputField">
-        Recipient: <input type="text" ng-model="purchase.recipient">
-    </div>
-    <div class="purchaseInputField">
-        Price: <input type="text" ng-model="purchase.price">
-    </div>
-    <div class="purchaseInputField">
-        Description: <input type="text" ng-model="purchase.description">
-    </div>
-    <button ng-click="addPurchase(purchase)">TRACK</button>
-</section>
-<div class="occasionContainer">
-    <h5>Occasion Details</h5>
+<div class="purchasesContainer">
+    <div class="purchaseCard" ng-repeat="purchase in purchaseList">
+        <div ng-switch="purchaseEditMode">
+            <div>
+                <h6>Gift Purchased For:</h6>
+                <input ng-if="purchase.edit" id="edit" ng-model="purchase.recipient" ng-value="purchase.recipient">
+                <h6 ng-if="!purchase.edit">{{purchase.recipient}}</h6>
+                Purchase ID {{purchase.id}}
+            </div>
 
+            <div>
+                <input ng-if="purchase.edit" id="edit" ng-model="purchase.name" ng-value="purchase.name">
+                <h6 ng-if="!purchase.edit">{{purchase.name}}</h6>
+            </div>
+
+            <div>
+                <input ng-if="purchase.edit" id="edit" ng-model="purchase.description" ng-value="purchase.description">
+                <h6 ng-if="!purchase.edit">{{purchase.description}}</h6>
+            </div>
+
+            <div>
+                <input ng-if="purchase.edit" id="edit" ng-model="purchase.price" ng-value="purchase.price">
+                <h6 ng-if="!purchase.edit">{{purchase.price}}</h6>
+            </div>
+
+            <div class="occasionButtons">
+                <button ng-if="!purchase.edit" ng-click="getPurchase(purchase)" id="{{purchase.id}}">EDIT</button>
+                <button ng-if="!purchase.edit" ng-click="deletePurchase(purchase.id)">DELETE</button>
+                <button ng-if="purchase.edit" id="edit" ng-click="updatePurchase(purchase.id, purchase)">SUBMIT</button>
+                <button ng-if="purchase.edit" id="edit" ng-click="cancelEdit()">CANCEL</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+    ADD PURCHASE
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Add Purchase</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <section class="addPurchaseForm">
+                    <div class="form-group">
+                        <label for="exampleFormControlSelect1">Occasion:</label>
+                        <select class="form-control" id="exampleFormControlSelect1" ng-model="purchase.occasion_id">
+                            <option value="">Select...</option>
+                            <option ng-repeat="occasion in occasionList" ng-value="{{occasion.id}}">{{occasion.title}}</option>
+                        </select>
+                    </div>
+                    <div class="purchaseInputField">
+                        Name:
+                        <input type="text" ng-model="purchase.name">
+                    </div>
+                    <div class="purchaseInputField">
+                        Recipient:
+                        <input type="text" ng-model="purchase.recipient">
+                    </div>
+                    <div class="purchaseInputField">
+                        Price:
+                        <input type="text" ng-model="purchase.price">
+                    </div>
+                    <div class="purchaseInputField">
+                        Description:
+                        <input type="text" ng-model="purchase.description">
+                    </div>
+                    <!-- <button ng-click="addPurchase(purchase)">TRACK</button> -->
+                </section>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" ng-click="addPurchase(purchase)">Save changes</button>
+            </div>
+        </div>
+    </div>
 </div>
