--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -1,8 +1,12 @@
 <section>
         <div class="loginForm">
-            Username: <input type="text" value="J" ng-model="userAccount.username"> <br>
-            Email: <input type="text" ng-model="userAccount.email"> <br>
-            Password: <input type="text" value="j" ng-model="userAccount.password">  <br>
+            Username: <input type="text" class="form-control" value="J" ng-model="userAccount.username"> <br>
+            Email: <input type="text" class="form-control" ng-model="userAccount.email"> <br>
+            Password: <input type="text" class="form-control" value="j" ng-model="userAccount.password">  <br>
             <button ng-click="login()">LOGIN</button>
+        </div>
+        <div>
+            <h4>New Users May Register Here</h4>
+            <a href="#!/register">Register</a>
         </div>
     </section>
