--- a/client/partials/nav.html
+++ b/client/partials/nav.html
@@ -6,8 +6,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto nav justify-content-end">
                 <li class="nav-item" ng-repeat="item in navBar"> 
-                    <!-- <a class="nav-link" ng-click="go(item.url)" ng-show="{{item.bang}}loggedIn" href="{{item.url}}">{{item.name}}</a> -->
-                    <a class="nav-link" ng-click="go(item.url)" href="{{item.url}}">{{item.name}}</a>
+                    <a class="nav-link" ng-click="go(item.url)" ng-show="{{item.bang}}loggedIn" href="{{item.url}}">{{item.name}}</a>
+                    <!-- <a class="nav-link" ng-click="go(item.url)" href="{{item.url}}">{{item.name}}</a> -->
                 </li>
             </ul>
         </div>
