--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,21 +1,50 @@
+.occasionHeader h1 {
+  margin: 20px 20px 0 20px; }
+
 .occasionsPageContainer {
-  width: 90%; }
+  width: 95%;
+  margin: 0 auto; }
   .occasionsPageContainer .individualOccContainer {
     width: 30%; }
     .occasionsPageContainer .individualOccContainer .addOccasion {
-      border: 2px solid black;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
       width: 100%;
-      padding: 20px; }
+      padding: 20px;
+      margin: 20px 0 0 0; }
       .occasionsPageContainer .individualOccContainer .addOccasion button {
         margin-top: 20px; }
+      .occasionsPageContainer .individualOccContainer .addOccasion .form-control {
+        margin: 0 0 10px 0; }
+
+.occasionCardContainer {
+  width: 90%; }
 
 .occasionCard {
-  width: 100%;
-  border: 2px solid black;
+  width: 95%;
   padding: 20px;
   text-decoration: none;
-  color: grey; }
+  color: grey;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  margin: 20px 20px 20px 40px; }
   .occasionCard h6 {
-    padding: 0 10px; }
+    padding: 10px;
+    padding-right: 0px;
+    margin-bottom: 0px; }
+  .occasionCard a .fa-calendar-alt {
+    color: #3f5023; }
+  .occasionCard a h6 {
+    color: #3f5023;
+    text-decoration: none; }
+  .occasionCard a h6:hover {
+    color: #3f5023;
+    text-decoration: none; }
   .occasionCard .occasionTitle {
-    width: 50%; }
+    width: 40%; }
+  .occasionCard .occasionDate {
+    width: 30%; }
+  .occasionCard .occasionBudget {
+    width: 30%; }
+
+.occasionCard:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22); }
