--- a/client/css/main.css
+++ b/client/css/main.css
@@ -31,14 +31,13 @@
     padding: 10px;
     padding-right: 0px;
     margin-bottom: 0px; }
-  .occasionCard a .fa-calendar-alt {
-    color: #3f5023; }
-  .occasionCard a h6 {
-    color: #3f5023;
+  .occasionCard a {
     text-decoration: none; }
-  .occasionCard a h6:hover {
-    color: #3f5023;
-    text-decoration: none; }
+    .occasionCard a .fa-calendar-alt {
+      color: #3f5023; }
+    .occasionCard a h6 {
+      color: #3f5023;
+      text-decoration: none; }
   .occasionCard .occasionTitle {
     width: 40%; }
   .occasionCard .occasionDate {
@@ -46,5 +45,62 @@
   .occasionCard .occasionBudget {
     width: 30%; }
 
+a:hover {
+  text-decoration: none !important; }
+
 .occasionCard:hover {
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22); }
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  text-decoration: none; }
+
+.individualHeader {
+  text-align: center;
+  margin: 20px 0 20px 0; }
+
+.individualOccasionCard {
+  margin: 0 auto;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  width: 90%; }
+  .individualOccasionCard strong {
+    text-decoration: underline; }
+  .individualOccasionCard .dataAndNumbers {
+    width: 100%;
+    position: relative;
+    padding: 20px 0 20px 0; }
+  .individualOccasionCard .occasionNumbers {
+    width: 50%;
+    text-align: center; }
+  .individualOccasionCard .occasionData {
+    width: 50%;
+    text-align: center; }
+  .individualOccasionCard .occasionButtons {
+    margin-top: 20px;
+    padding: 10px;
+    position: absolute;
+    bottom: 0;
+    right: 0; }
+    .individualOccasionCard .occasionButtons a {
+      padding: 5px; }
+
+.purchaseCard {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  margin: 20px;
+  width: 20%;
+  padding: 10px;
+  position: relative;
+  min-height: 300px; }
+  .purchaseCard .occasionButtons {
+    margin-top: 20px;
+    padding: 10px;
+    position: absolute;
+    bottom: 0;
+    right: 0; }
+
+.purchaseCard:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  text-decoration: none; }
+
+.secondaryHeader {
+  margin-top: 35px; }
+  .secondaryHeader h4 {
+    margin-left: 20px; }
