--- a/client/partials/individualOccasion.html
+++ b/client/partials/individualOccasion.html
@@ -1,64 +1,77 @@
-<h1>INDIVIdual OCCASION</h1>
 
-
-<div>
-    <div ng-switch="editMode">
-        <h6>Occasion:</h6>
-        <input type="text" class="form-control" ng-switch-when="edit" id="edit" ng-model="occasion[0].title" ng-value="occasion[0].title">
-        <h6 ng-switch-default id="{{occasion[0].title}}">{{occasion[0].title}}</h6>
-
-        <h6>Date:</h6>
-        <input type="text" class="form-control" ng-switch-when="edit" id="edit" ng-model="occasion[0].date" ng-value="occasion[0].date">
-        <h6 ng-switch-default>{{occasion[0].date}}</h6>
-
-        <h6>Budget:</h6>
-        <input type="text" class="form-control" ng-switch-when="edit" type="integer" id="edit" ng-model="occasion[0].budget" ng-value="occasion[0].budget">
-        <h6 ng-switch-default>{{occasion[0].budget}}</h6>
+<div class="individualHeader">
+    <h1>{{occasion[0].title}}</h1>
+</div>
+<div class="individualOccasionContainer">
+    <div class="individualOccasionCard" ng-switch="editMode">
+        <div class="dataAndNumbers d-flex flex-row">
+            <div class="occasionData">
+                <h3><strong>Occasion</strong></h3>
+                <input type="text" class="form-control" ng-switch-when="edit" id="edit" ng-model="occasion[0].title" ng-value="occasion[0].title">
+                <h3 ng-switch-default id="{{occasion[0].title}}">{{occasion[0].title}}</h3>
         
-        <div class="occasionButtons">
-            <button type="button" class="btn btn-secondary btn-sm" ng-switch-default ng-click="getOccasion()">EDIT</button>
-            <button type="button" class="btn btn-danger btn-sm" ng-switch-default ng-click="deleteOccasion()">DELETE</button>
-            <button type="button" class="btn btn-secondary btn-sm" ng-switch-when="edit" id="edit" ng-click="updateOccasion(occasion[0].id, occasion[0])">SUBMIT</button>
-            <button type="button" class="btn btn-light btn-sm" ng-switch-when="edit" id="edit" ng-click="cancelEdit()">CANCEL</button>
-
+                <h3><strong>Date</strong></h3>
+                <input type="text" class="form-control" ng-switch-when="edit" id="edit" ng-model="occasion[0].date" ng-value="occasion[0].date">
+                <h3 ng-switch-default>{{occasion[0].date}}</h3>
+            </div>
     
+            <div class="occasionNumbers">
+                <h3><strong>Budget</strong></h3>
+                <input type="text" class="form-control" ng-switch-when="edit" type="integer" id="edit" ng-model="occasion[0].budget" ng-value="occasion[0].budget">
+                <h3 ng-switch-default>${{occasion[0].budget}}</h3>
+                <h3><strong>Spent</strong></h3> 
+                <h3>${{total}}</h3>
+            </div>
+            <div class="occasionButtons">
+                <a ng-switch-default ng-click="getOccasion()"><i class="far fa-edit" data-toggle="tooltip" title="Edit"></i></a>
+                <a ng-switch-default ng-click="deleteOccasion()"><i class="far fa-trash-alt" data-toggle="tooltip" title="Delete"></i></a>
+        
+                <!-- <button type="button" class="btn btn-secondary btn-sm" ng-switch-default ng-click="getOccasion()">EDIT</button> -->
+                <!-- <button type="button" class="btn btn-danger btn-sm" ng-switch-default ng-click="deleteOccasion()">DELETE</button> -->
+                <button type="button" class="btn btn-secondary btn-sm" ng-switch-when="edit" id="edit" ng-click="updateOccasion(occasion[0].id, occasion[0])">SUBMIT</button>
+                <button type="button" class="btn btn-light btn-sm" ng-switch-when="edit" id="edit" ng-click="cancelEdit()">CANCEL</button>
+            </div>
         </div>
-        <h6>Total Spent: {{total}}</h6>
     </div>
 </div>
 
 
-
-<h4>Purchases</h4>
-<div class="purchaseCard" ng-repeat="purchase in occasionPurchases">
-    <div ng-switch="purchaseEditMode">
-        <div>
-            <h6>Gift Purchased For:</h6> 
-            <input ng-if="purchase.edit" type="text" class="form-control" id="edit" ng-model="purchase.recipient" ng-value="purchase.recipient">
-            <h6 ng-if="!purchase.edit">{{purchase.recipient}}</h6>
-            Purchase ID {{purchase.id}}
-        </div>
-
-        <div>
-            <input ng-if="purchase.edit" type="text" class="form-control" id="edit" ng-model="purchase.name" ng-value="purchase.name">
-            <h6 ng-if="!purchase.edit">{{purchase.name}}</h6>
-        </div>
-
-        <div>
-            <input ng-if="purchase.edit" type="text" class="form-control" id="edit" ng-model="purchase.description" ng-value="purchase.description">
-            <h6 ng-if="!purchase.edit">{{purchase.description}}</h6>
-        </div>
-
-        <div>
-            <input ng-if="purchase.edit" type="text" class="form-control" id="edit" ng-model="purchase.price" ng-value="purchase.price">
-            <h6 ng-if="!purchase.edit">{{purchase.price}}</h6>
-        </div>
-
-        <div class="occasionButtons">
-            <button type="button" class="btn btn-secondary btn-sm" ng-if="!purchase.edit" ng-click="getPurchase(purchase)" id="{{purchase.id}}">EDIT</button>
-            <button type="button" class="btn btn-danger btn-sm" ng-if="!purchase.edit" ng-click="deletePurchase(purchase.id)">DELETE</button>
-            <button type="button" class="btn btn-secondary btn-sm" ng-if="purchase.edit" id="edit" ng-click="updatePurchase(purchase.id, purchase)">SUBMIT</button>
-            <button type="button" class="btn btn-light btn-sm" ng-if="purchase.edit" id="edit" ng-click="cancelEdit()">CANCEL</button>
+<div class="secondaryHeader">
+    <h4>{{occasion[0].title}} Purchases</h4>
+</div>
+<div class="purchaseCardContainer d-flex flex-row flex-wrap">
+    <div class="purchaseCard" ng-repeat="purchase in occasionPurchases">
+        <div ng-switch="purchaseEditMode">
+            <div>
+                <h6><strong>Purchased For</strong></h6> 
+                <input ng-if="purchase.edit" type="text" class="form-control" id="edit" ng-model="purchase.recipient" ng-value="purchase.recipient">
+                <h6 ng-if="!purchase.edit">{{purchase.recipient}}</h6>
+            </div>
+    
+            <div>
+                <h6><strong>Gift</strong></h6>
+                <input ng-if="purchase.edit" type="text" class="form-control" id="edit" ng-model="purchase.name" ng-value="purchase.name">
+                <h6 ng-if="!purchase.edit">{{purchase.name}}</h6>
+            </div>
+    
+            <div>
+                <h6><strong>Description</strong></h6>
+                <input ng-if="purchase.edit" type="text" class="form-control" id="edit" ng-model="purchase.description" ng-value="purchase.description">
+                <h6 ng-if="!purchase.edit">{{purchase.description}}</h6>
+            </div>
+    
+            <div>
+                <h6><strong>Price</strong></h6>
+                <input ng-if="purchase.edit" type="text" class="form-control" id="edit" ng-model="purchase.price" ng-value="purchase.price">
+                <h6 ng-if="!purchase.edit">{{purchase.price}}</h6>
+            </div>
+    
+            <div class="occasionButtons">
+                <button type="button" class="btn btn-secondary btn-sm" ng-if="!purchase.edit" ng-click="getPurchase(purchase)" id="{{purchase.id}}">EDIT</button>
+                <button type="button" class="btn btn-danger btn-sm" ng-if="!purchase.edit" ng-click="deletePurchase(purchase.id)">DELETE</button>
+                <button type="button" class="btn btn-secondary btn-sm" ng-if="purchase.edit" id="edit" ng-click="updatePurchase(purchase.id, purchase)">SUBMIT</button>
+                <button type="button" class="btn btn-light btn-sm" ng-if="purchase.edit" id="edit" ng-click="cancelEdit()">CANCEL</button>
+            </div>
         </div>
     </div>
 </div>
