--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -1,3 +1,6 @@
+
+//////////////////////// OCCASIONS ////////////////////////////
+
 .occasionHeader {
     h1 {
         margin: 20px 20px 0 20px;
@@ -45,14 +48,11 @@
         margin-bottom: 0px;
     }
     a {
+        text-decoration: none;
         .fa-calendar-alt {
             color:rgb(63, 80, 35);
         }
         h6 {
-            color: rgb(63, 80, 35);
-            text-decoration: none;
-        }
-        h6:hover {
             color: rgb(63, 80, 35);
             text-decoration: none;
         }
@@ -70,6 +70,82 @@
     // box-shadow: 12px 0 15px -4px rgba(99, 98, 97, 0.4);
 }
 
+a:hover {
+    text-decoration: none !important;
+}
+
 .occasionCard:hover {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  }
+    text-decoration: none;
+}
+
+//////////////////////// INDIVIDUAL OCCASION ////////////////////////////
+
+.individualHeader{
+    text-align: center;
+    margin: 20px 0 20px 0;
+}
+
+.individualOccasionContainer {
+}
+.individualOccasionCard {
+    strong {
+        text-decoration: underline;
+    }
+    margin: 0 auto;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    width: 90%;
+    .dataAndNumbers {
+        width: 100%;
+        position: relative;
+        padding: 20px 0 20px 0;
+    }
+    .occasionNumbers {
+        width: 50%;
+        text-align: center;
+    }
+    .occasionData {
+        width: 50%;
+        text-align: center;        
+    }
+    .occasionButtons {
+        margin-top: 20px;
+        padding: 10px;
+        position: absolute;
+        bottom:0;
+        right:0;
+        a {
+            padding: 5px;
+        }
+    }
+}
+
+.purchaseCard {
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    margin: 20px;
+    width: 20%;
+    padding: 10px;
+    position: relative;
+    min-height: 300px;
+    .occasionButtons {
+        margin-top: 20px;
+        padding: 10px;
+        position: absolute;
+        bottom:0;
+        right:0;
+    }
+}
+
+.purchaseCard:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    text-decoration: none;
+}
+
+.secondaryHeader {
+    margin-top: 35px;
+    // margin-bottom: 25px;
+    h4 {
+        margin-left: 20px;
+    }
+}
