--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -1,2 +1,6 @@
-<h1>YOUVE BEEN LOGGED OUT</h1>
+<h1>WELCOME TO KEEP UP</h1>
+
+<button type="button" onclick="location.href = '#!/login'" class="btn btn-secondary">LOGIN</button>
+<button type="button" onclick="location.href = '#!/register'" class="btn btn-secondary">REGISTER</button>
+
 
