--- a/client/partials/nav.html
+++ b/client/partials/nav.html
@@ -9,6 +9,11 @@
                     <a class="nav-link" ng-click="go(item.url)" ng-show="{{item.bang}}loggedIn" href="{{item.url}}">{{item.name}}</a>
                     <!-- <a class="nav-link" ng-click="go(item.url)" href="{{item.url}}">{{item.name}}</a> -->
                 </li>
+                <li>
+                    <form method="POST" class="form-inline nav-item" action="/logout">
+                        <button ng-show="isLoggedIn()" class="btn btn-link logout" type="submit">Logout</button>
+                    </form>
+                </li>
             </ul>
         </div>
     </nav>
