--- a/client/partials/individualOccasion.html
+++ b/client/partials/individualOccasion.html
@@ -63,7 +63,7 @@
             <div>
                 <h6><strong>Price</strong></h6>
                 <input ng-if="purchase.edit" type="text" class="form-control" id="edit" ng-model="purchase.price" ng-value="purchase.price">
-                <h6 ng-if="!purchase.edit">{{purchase.price}}</h6>
+                <h6 ng-if="!purchase.edit">${{purchase.price}}</h6>
             </div>
     
             <div class="occasionButtons">
