syled new logout in nav

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -1,7 +1,14 @@
 
 .logout {
     text-decoration: none;
+    color: rgb(139, 138, 138) !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    font-weight: normal;
+}
+.logout:hover {
     color: black;
+    text-decoration: none !important;
 }
 
 //////////////////////// OCCASIONS ////////////////////////////
