--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,6 +1,13 @@
 .logout {
   text-decoration: none;
-  color: black; }
+  color: #8b8a8a !important;
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+  font-weight: normal; }
+
+.logout:hover {
+  color: black;
+  text-decoration: none !important; }
 
 .occasionHeader h1 {
   margin: 20px 20px 0 20px; }
