--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -13,6 +13,16 @@
 
 //////////////////////// OCCASIONS ////////////////////////////
 
+.noOccasionsAlert {
+        margin-left: 20px;
+        margin-top: 20px;
+        border: 2px solid black;
+}
+
+.alert {
+    margin-top: 20px !important;
+}
+
 .occasionHeader {
     h1 {
         margin: 20px 20px 0 20px;
