--- a/client/partials/purchases.html
+++ b/client/partials/purchases.html
@@ -33,7 +33,7 @@
         </div>
         <div class="totalPurchases">
             <h2><strong>Total Amount Spent On Purchases</strong></h2>
-            <h2>${{total}}</h2>
+            <h2 ng-pattern="^[+-]?[0-9]{1,3}(?:,?[0-9]{3})*\.[0-9]{2}$">${{total}}</h2>
         </div>
     </div>
     <div class="secondaryPurchaseHeader">
